feat!: change 'id' type to string and rename 'name' to 'displayName' in Deployment (#35)